--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@ant-design/nextjs-registry": "^1.1.0",
+    "@google/generative-ai": "^0.24.0",
+    "@rcb-plugins/llm-connector": "^0.3.2",
     "ahooks": "^3.9.5",
     "antd": "^5.27.2",
     "antd-style": "^3.7.1",
+    "lodash": "^4.17.21",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-chatbotify": "^2.3.2",
     "react-dom": "19.1.0",
     "react-i18next": "^16.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "sass": "^1.93.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
